# Vehicle-Insurance

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
notebook/: rf_model.pkl
src/constants/: __init__.py
src/logger/: __init__.py
